--- a/src/Login.html
+++ b/src/Login.html
@@ -32,7 +32,7 @@
                     </div>
                     <h2 class="fw-bold text-center py-5">bienvenido</h2>
 
-                    <form action="#">
+                    <form action="../index.html">
                         <div class="mb-4">
                             <label for="email" class="form-label">Correo electronico</label>
                             <input type="email" class="form-control" name="email">
