--- a/src/Register.html
+++ b/src/Register.html
@@ -29,7 +29,7 @@
                     </div>
                     <h2 class="fw-bold text-center py-5">Registrate</h2>
 
-                    <form action="#">
+                    <form action="../src/Login.html">
                         <div class="mb-4">
                             <label for="name" class="form-label">Nombre</label>
                             <input type="name" class="form-control" name="namel">
