--- a/src/Index_usuario.html
+++ b/src/Index_usuario.html
@@ -7,9 +7,9 @@
 	<title>Inicio Gym</title>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"/>
-  <link rel="stylesheet" type="text/css" href="../Front/css/main.css">    
-  <link rel="stylesheet" type="text/css" href="../Front/css/scheme.css">  
-  <link rel="stylesheet" type="text/css" href="../Front/css/style.css">   
+  <link rel="stylesheet" type="text/css" href="../css/main.css">    
+  <link rel="stylesheet" type="text/css" href="../css/scheme.css">  
+  <link rel="stylesheet" type="text/css" href="../css/style.css">   
 </head>
 <body>
     <div id="main-container">
@@ -20,30 +20,31 @@
       				<button id="bmenu">
       					<span class="material-icons">&#xe5d2;</span>
       				</button>
-      				<a href="#"><img src="../Front/img/logo.png" width="50px"></a>
+      				<a href="#"><img src="../img/logo.png" width="50px"></a>
       				<div>
       					<a href="#"><span class="material-icons">&#xe8cc;</span></a>
-      					<a href="../Front/index.html"><span class="material-icons">&#xe853;</span></a>
+      					<a href=""><span class="material-icons">&#xe853;</span></a>
       				</div>
       			</div>
       			<div class="links">
-      				<a href="../Front/src/Quienes_somos.html">Quienes Somos</a>
-      				<a href="../Front/src/Alimentacion.html">Alimentación</a>
+      				<a href="../src/Quienes_somosU.html">Quienes Somos</a>
+      				<a href="#">Recetarios</a>
       			</div>
       		</div>
       		<ul>
-      			<li ><a href="#"><img src="../Front/img/logo.png" width="20px"></a></li>
-      			<li><a href="../Front/src/Quienes_somos.html" class="link">Quienes Somos</a></li>
-      			<li><a href="../Front/src/Alimentacion.html" class="link link-hide">Alimentación</a></li>
+      			<li ><a href="#"><img src="../img/logo.png" width="20px"></a></li>
+      			<li><a href="../src/Quienes_somosU.html" class="link">Quienes Somos</a></li>
+      			<li><a href="#" class="link link-hide">Recetarios</a></li>
       			<li class="more">
       				<a href="#" class="link" id="bmore">More</a>
       				<div class="menu">
-      					<a href="../Front/src/Alimentacion.html">Alimentación</a>
+      					<a href="#">Recetarios</a>
       				</div>
       			</li>
       		</ul>
       		<ul>
-      			<li><a href="../Front/src/Login.html" class="link"Search>Iniciar Sesión</a></li>
+                <li><a href="#" class="link"Search>Usuario</a></li>
+      			<li><a href="../index.html" class="link"Search>Cerrar Sesión</a></li>
       		</ul>
       	</nav>
       </header>
@@ -88,6 +89,6 @@
       	</div>
       </section>
     </div>
-    <script src="../Front/js/main.js" t></script>
+    <script src="../js/main.js" t></script>
 </body>
 </html>
