--- a/src/Index_usuario.html
+++ b/src/Index_usuario.html
@@ -28,17 +28,17 @@
       			</div>
       			<div class="links">
       				<a href="../src/Quienes_somosU.html">Quienes Somos</a>
-      				<a href="#">Recetarios</a>
+      				<a href="../src/AlimentacionU.html">Alimentación</a>
       			</div>
       		</div>
       		<ul>
       			<li ><a href="#"><img src="../img/logo.png" width="20px"></a></li>
       			<li><a href="../src/Quienes_somosU.html" class="link">Quienes Somos</a></li>
-      			<li><a href="#" class="link link-hide">Recetarios</a></li>
+      			<li><a href="#" class="link link-hide">Alimentación</a></li>
       			<li class="more">
-      				<a href="#" class="link" id="bmore">More</a>
+      				<a href="../src/AlimentacionU.html" class="link" id="bmore">More</a>
       				<div class="menu">
-      					<a href="#">Recetarios</a>
+      					<a href="../src/AlimentacionU.html">Alimentación</a>
       				</div>
       			</li>
       		</ul>
