--- a/src/Index_usuario.html
+++ b/src/Index_usuario.html
@@ -34,7 +34,7 @@
       		<ul>
       			<li ><a href="#"><img src="../img/logo.png" width="20px"></a></li>
       			<li><a href="../src/Quienes_somosU.html" class="link">Quienes Somos</a></li>
-      			<li><a href="#" class="link link-hide">Alimentación</a></li>
+      			<li><a href="../src/AlimentacionU.html" class="link link-hide">Alimentación</a></li>
       			<li class="more">
       				<a href="../src/AlimentacionU.html" class="link" id="bmore">More</a>
       				<div class="menu">
@@ -43,7 +43,7 @@
       			</li>
       		</ul>
       		<ul>
-                <li><a href="#" class="link"Search>Usuario</a></li>
+                <li><a href="../src/Usuario.html" class="link"Search>Usuario</a></li>
       			<li><a href="../index.html" class="link"Search>Cerrar Sesión</a></li>
       		</ul>
       	</nav>
