--- a/src/AlimentacionU.html
+++ b/src/AlimentacionU.html
@@ -45,7 +45,7 @@
       			</li>
       		</ul>
       		<ul>
-                <li><a href="#" class="link"Search>Usuario</a></li>
+                <li><a href="../src/Usuario.html" class="link"Search>Usuario</a></li>
       			<li><a href="../index.html" class="link"Search>Cerrar Sesión</a></li>
       		</ul>
       	</nav>
