--- a/src/Maquinas.html
+++ b/src/Maquinas.html
@@ -55,7 +55,7 @@
             </nav>
         </header>
         <section id="banner">
-        <h2>Rutinas</h2>
+        <h2>Maquinas</h2>
         </section>
         <section>
             <div id="maquinas"></div>
