--- a/src/Admin.html
+++ b/src/Admin.html
@@ -48,7 +48,7 @@
                     </li>
                 </ul>
                 <ul>
-                  <li><a href="../src/Index_usuario.html" class="link"Search>Home</a></li>
+                  <li><a href="../src/Index_admin.html" class="link"Search>Home</a></li>
                     <li><a href="../index.html" class="link"Search>Cerrar Sesión</a></li>
                 </ul>
             </nav>
