--- a/src/EntrenadorA.html
+++ b/src/EntrenadorA.html
@@ -55,7 +55,7 @@
             </nav>
         </header>
         <section id="banner">
-        <h2>Rutinas</h2>
+        <h2>Entrenador</h2>
         </section>
         <section>
             <div id="entrenador"></div>
